# Quarky-New

./: .gitignore  README.md  fix_imports.py  main.py  migrate_structure.py  requirements.txt
AppStudio/: backup.py  config_watcher.py  updater.py
AppStudio/API/: routes.py  server.py
AppStudio/GUI/: __init__.py  app.py  chat_panel.py  main_window.py  sidebar.py  theme.py  title_bar.py  toast.py  voice_overlay.py
AppStudio/Infrastructure/: __init__.py  classifier.py  gateway.py  load_balancer.py  logger.py  packer.py  permissions.py  protocol.py  worker_pool.py  (+1 more)
MAIINNN/: cli.py  learner.py  orchestrator.py  session.py  session_v2.py
Migration/: JAVA_CPP_MIGRATION.md
Migration/native-core/: CMakeLists.txt
Migration/native-core/include/louisai/engine/: engine_facade.hpp
Migration/native-core/src/: engine_facade.cpp
benchmarks/: __init__.py  __main__.py  dataset.py  metrics.py  runner.py  scorecard.py
core/: learner.py  orchestrator.py
tests/: conftest.py  test_action.py  test_api.py  test_benchmarks.py  test_brain.py  test_decision.py  test_generation.py  test_integration.py  test_knowledge.py  test_memory.py  test_memory_consolidation.py  test_nlp.py  test_phase_regression.py  test_reasoning_critique.py  test_session.py  test_skills.py  test_soak.py  test_updater.py  test_v2_brain.py  test_v2_capabilities.py  test_v2_decision.py  test_v2_gui.py  test_v2_infrastructure.py  test_v2_integrations.py  test_v2_intelligence.py  test_v2_learning.py  test_v2_memory.py  test_v2_nlp.py  test_v2_orchestrator.py  test_v2_reasoning.py  test_v2_voice.py  test_voice.py
(+353 files in other folders)
